syntax = "proto3";

option csharp_namespace = "Contracts";

package user;

service UserServiceRpc {
  rpc Register (RegisterRequest) returns (RegisterResponse);
}

message RegisterRequest {
  string login = 1;
  string password = 2;
}

message RegisterResponse {
  bool success = 1;
  string message = 2;
}